CAMEL-23672: camel-tui - Remove image diagram rendering, text-only mode
Remove all image-based diagram rendering from the TUI. The TUI is text-based
so image rendering via terminal protocols (iTerm2/Kitty/Sixel) is unnecessary
complexity. This removes ~230 lines of image handling code including crop/scroll
calculations, terminal capability detection, and image protocol negotiation.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>